--- a/source/index.html
+++ b/source/index.html
@@ -1,31 +1,86 @@
 <!DOCTYPE html>
 <html lang="ru" data-validate="html">
 
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Internship</title>
-    <link rel="stylesheet" href="sass/style.scss">
-  </head>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Intership. Глобальный профессиональный опыт обучения за рубежом.">
+  <link rel="stylesheet" href="sass/style.scss">
+  <link rel="preload" href="css/style.min.css" as="style">
+  <link rel="preload" href="./fonts/Manrope-Bold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+  <link rel="preload" href="./fonts/Manrope-SemiBold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+  <link rel="preload" href="./fonts/Manrope-ExtraBold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+  <link rel="preload" href="./fonts/Manrope-ExtraLight.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+  <link rel="preload" href="./fonts/Manrope-Light.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+  <link rel="preload" href="./fonts/Manrope-Medium.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+  <link rel="preload" href="./fonts/Manrope-Regular.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+  <link rel="icon" type="image/png" sizes="32x32" href="img/favicons/favicon.png">
+  <link rel="icon" href="favicon.ico">
+  <link rel="icon" type="image/svg+xml" href="images/favicons/icon.svg">
+  <link rel="apple-touch-icon" href="images/favicons/apple.png">
+  <link rel="manifest" href="manifest.webmanifest">
+  <title>Intership. Глобальный профессиональный опыт обучения за рубежом.</title>
+</head>
 
-  <body class="page-body">
-    <!-- пример использования спрайта -->
-    <img src="/__spritemap#sprite-logo-view" alt="Это спрайт">
-    <svg>
-      <use href="/__spritemap#sprite-user"></use>
-    </svg>
-    <!-- примеры требуемых атрибутов data-test="*" -->
-    <div data-test="hero">hero</div>
-    <div data-test="about">about</div>
-    <div data-test="programs">programs</div>
-    <div data-test="grant">grant</div>
-    <div data-test="news">news</div>
-    <div data-test="FAQ">FAQ</div>
-    <div data-test="reviews">reviews</div>
-    <div data-test="contacts">contacts</div>
-    <div data-test="form">form</div>
-    <div data-test="footer">footer</div>
-    <script type="module" src="js/main.js"></script>
-  </body>
+<body class="page-body">
+
+  <!-- header -->
+  <header class="header container">
+    <h1 class="visually-hidden">Intership. Глобальный профессиональный опыт обучения за рубежом.</h1>
+    <div class="header__burger-menu burger-menu">
+      <p class="burger-menu__title">МЕНЮ</p>
+      <div class="burger-menu__button-wrapper">
+        <button class="burger-menu__button button">
+          <span></span>
+          <span></span>
+          <span></span>
+        </button>
+      </div>
+      <nav class="burger-menu__nav">
+        <ul class="burger-menu__list">
+          <li class="burger-menu__item"><a class="burger-menu__link" href="#">Menu item 1</a></li>
+          <li class="burger-menu__item"><a class="burger-menu__link" href="#">Another menu item</a></li>
+          <li class="burger-menu__item"><a class="burger-menu__link" href="#">One last menu item</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+
+  <!-- main -->
+  <main>
+    <section data-test="hero">
+      <div cla>
+
+      </div>
+    </section>
+
+  </main>
+
+  <!-- footer -->
+  <footer>
+
+  </footer>
+
+
+
+
+  <!-- пример использования спрайта -->
+  <!-- <img src="/__spritemap#sprite-logo-view" alt="Это спрайт">
+  <svg>
+    <use href="/__spritemap#sprite-user"></use>
+  </svg> -->
+  <!-- примеры требуемых атрибутов data-test="*" -->
+  <!-- <div data-test="about">about</div>
+  <div data-test="programs">programs</div>
+  <div data-test="grant">grant</div>
+  <div data-test="news">news</div>
+  <div data-test="FAQ">FAQ</div>
+  <div data-test="reviews">reviews</div>
+  <div data-test="contacts">contacts</div>
+  <div data-test="form">form</div>
+  <div data-test="footer">footer</div> -->
+  <script type="module" src="js/main.js"></script>
+</body>
 
 </html>
