Меняет структуру кода и реализует состояние бургерного меню

--- a/source/index.html
+++ b/source/index.html
@@ -25,26 +25,64 @@
 <body class="page-body">
 
   <!-- header -->
-  <header class="header container">
+
+  <div class="header container">
+    <button class="header__menu-button button" id="burger-link" href="#nav">
+      МЕНЮ
+      <div class="header__menu-wrapper">
+        <div class="header__menu">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+      </div>
+    </button>
+    <nav class="header__nav">
+      <ul class="header__nav-list">
+        <li class="header__nav-item">
+          <a class="header__nav-link" href="#">Menu item 1</a>
+        </li>
+        <li class="header__nav-item">
+          <a class="header__nav-link" href="#">Another menu item</a>
+        </li>
+        <li class="header__nav-item">
+          <a class="header__nav-link" href="#">One last menu item</a>
+        </li>
+      </ul>
+    </nav>
+  </div>
+
+
+
+  <!-- <section class="overlay">
+  </section> -->
+
+  <!-- <header class="header container">
     <h1 class="visually-hidden">Intership. Глобальный профессиональный опыт обучения за рубежом.</h1>
     <div class="header__burger-menu burger-menu">
-      <p class="burger-menu__title">МЕНЮ</p>
-      <div class="burger-menu__button-wrapper">
-        <button class="burger-menu__button button">
+      <p class="header__nav-title">МЕНЮ</p>
+      <div class="header__nav-button-wrapper">
+        <button class="header__nav-button button">
           <span></span>
           <span></span>
           <span></span>
         </button>
       </div>
-      <nav class="burger-menu__nav">
-        <ul class="burger-menu__list">
-          <li class="burger-menu__item"><a class="burger-menu__link" href="#">Menu item 1</a></li>
-          <li class="burger-menu__item"><a class="burger-menu__link" href="#">Another menu item</a></li>
-          <li class="burger-menu__item"><a class="burger-menu__link" href="#">One last menu item</a></li>
+      <nav class="header__nav-nav container">
+        <ul class="header__nav-list">
+          <li class="header__nav-item">
+            <a class="header__nav-link" href="#">Menu item 1</a>
+          </li>
+          <li class="header__nav-item">
+            <a class="header__nav-link" href="#">Another menu item</a>
+          </li>
+          <li class="header__nav-item">
+            <a class="header__nav-link" href="#">One last menu item</a>
+          </li>
         </ul>
       </nav>
     </div>
-  </header>
+  </header> -->
 
 
   <!-- main -->
