--- a/source/index.html
+++ b/source/index.html
@@ -35,7 +35,7 @@
     </div>
     <button class="header__menu-button button" type="button" id="burger-link">
       МЕНЮ
-      <span class="header__menu-wrapper">
+      <span class="header__menu-wrapper button-icon-wrapper">
         <span class="header__menu">
           <span></span>
           <span></span>
@@ -111,15 +111,108 @@
   <section class="overlay">
   </section>
 
-
-
-
-
   <!-- main -->
   <main>
-    <section data-test="hero">
-      <div>
+    <section class="hero" data-test="hero">
+      <div class="hero__container container">
 
+        <div class="hero__image-wrapper">
+          <picture>
+            <source type="image/webp" media="(min-width: 1440px)"
+              srcset="./img/hero/hero-desktop-02.webp 1x, ./img/hero/hero-desktop-02@2x.webp 2x" width="1440"
+              height="800">
+            <source type="image/webp" media="(min-width: 768px)"
+              srcset="./img/hero/hero-tablet-02.webp 1x, ./img/hero/hero-tablet-02@2x.webp 2x" width="768"
+              height="1024">
+            <img class="hero__image" src="./img/hero/hero-mobile-01.jpg"
+              alt="Мужчина с двумя девушками работают в планшете" width="320" height="568"
+              srcset="./img/hero/hero-mobile-02@2x.jpg 2x" loading="lazy">
+          </picture>
+        </div>
+
+      </div>
+    </section>
+
+    <section class="faq-accordion" data-test="FAQ">
+      <div class="faq-accordion__container container">
+        <h2 class="faq-accordion__title">Вопросы и ответы</h2>
+        <ul class="faq-accordion__list" id="accordion">
+          <li class="faq-accordion__item">
+            <button class="faq-accordion__button button" data-toggle="#faq1">
+              Кто организатор? Какие сроки у программы?
+              <span class="faq-accordion__button-wrapper button-icon-wrapper">
+                <svg class="faq-accordion__icon" width="18" height="18" viewBox="0 0 18 18" role="img" focusable="false"
+                  aria-hidden="true">
+                  <use href="/__spritemap#sprite-plus"></use>
+                </svg>
+              </span>
+            </button>
+            <div class="faq-accordion__content" id="faq1">
+              <p>
+                Организатором программы является проект «Стажировка» в сотрудничестве с образовательными учреждениями.
+                Сроки программы обмена могут варьироваться от одного семестра до года.
+              </p>
+            </div>
+          </li>
+          <li class="faq-accordion__item">
+            <button class="faq-accordion__button button" data-toggle="#faq2">
+              Что такое грант на обучение?
+              <span class="faq-accordion__button-wrapper button-icon-wrapper">
+              </span>
+            </button>
+            <div class="faq-accordion__content" id="faq2">
+              <p>
+                Грант на обучение — это финансовая поддержка, которую предоставляет организатор программы обмена
+                студентами
+                для оплаты учебных расходов.
+              </p>
+            </div>
+          </li>
+          <li class="faq-accordion__item">
+            <button class="faq-accordion__button button" data-toggle="#faq3">
+              Как определяется стоимость программы?
+              <span class="faq-accordion__button-wrapper button-icon-wrapper">
+              </span>
+            </button>
+            <div class="faq-accordion__content" id="faq3">
+              <p>
+                Полная стоимость определяется организаторами в зависимости от направления. В большинстве случаев грант
+                «Стажировка» не покрывает полную стоимость программы, и поэтому предусматривается определённая доля
+                личного участия.
+              </p>
+            </div>
+          </li>
+          <li class="faq-accordion__item">
+            <button class="faq-accordion__button button" data-toggle="#faq4">
+              Признаётся ли учёба в рамках проекта для дальнейшего обучения?
+              <span class="faq-accordion__button-wrapper button-icon-wrapper">
+              </span>
+            </button>
+            <div class="faq-accordion__content" id="faq4">
+              <p>
+                Студенты, участвующие в проекте, могут использовать полученные знания и навыки в своей будущей
+                профессиональной деятельности или продолжить обучение в высших учебных заведениях. Кроме того, многие
+                университеты и колледжи предоставляют кредиты за участие в программе обмена студентами.
+              </p>
+            </div>
+          </li>
+          <li class="faq-accordion__item">
+            <button class="faq-accordion__button button" data-toggle="#faq5">
+              Как выглядит полный процесс регистрации на программу «Стажировка»?
+              <span class="faq-accordion__button-wrapper button-icon-wrapper">
+              </span>
+            </button>
+            <div class="faq-accordion__content" id="faq5">
+              <p>
+                Процесс регистрации на программу обмена включает выбор университета-партнера и программы обмена, общение
+                с
+                координатором программы, заполнение заявления и предоставление необходимых документов, прохождение
+                интервью, оформление визы, жилья и страховки, обучение по безопасности за границей и подписание договора
+                об участии в программе. Подробнее можно узнать позвонив в центр.
+              </p>
+            </div>
+          </li>
+        </ul>
       </div>
     </section>
 
