Проверяет блок с аккордионом по PP

--- a/source/index.html
+++ b/source/index.html
@@ -139,12 +139,12 @@
         <ul class="faq-accordion__list" id="accordion">
           <li class="faq-accordion__item">
             <button class="faq-accordion__button button" data-toggle="#faq1">
-              Кто организатор? Какие сроки у программы?
-              <span class="faq-accordion__button-wrapper button-icon-wrapper">
-                <svg class="faq-accordion__icon" width="18" height="18" viewBox="0 0 18 18" role="img" focusable="false"
-                  aria-hidden="true">
-                  <use href="/__spritemap#sprite-plus"></use>
-                </svg>
+              <span class="faq-accordion__button-text">
+                Кто организатор? Какие сроки у программы?
+              </span>
+              <span class="faq-accordion__icon-wrapper button-icon-wrapper">
+                <span></span>
+                <span></span>
               </span>
             </button>
             <div class="faq-accordion__content" id="faq1">
@@ -156,8 +156,12 @@
           </li>
           <li class="faq-accordion__item">
             <button class="faq-accordion__button button" data-toggle="#faq2">
-              Что такое грант на обучение?
-              <span class="faq-accordion__button-wrapper button-icon-wrapper">
+              <span class="faq-accordion__button-text">
+                Что такое грант на обучение?
+              </span>
+              <span class="faq-accordion__icon-wrapper button-icon-wrapper">
+                <span></span>
+                <span></span>
               </span>
             </button>
             <div class="faq-accordion__content" id="faq2">
@@ -170,8 +174,12 @@
           </li>
           <li class="faq-accordion__item">
             <button class="faq-accordion__button button" data-toggle="#faq3">
-              Как определяется стоимость программы?
-              <span class="faq-accordion__button-wrapper button-icon-wrapper">
+              <span class="faq-accordion__button-text">
+                Как определяется стоимость программы?
+              </span>
+              <span class="faq-accordion__icon-wrapper button-icon-wrapper">
+                <span></span>
+                <span></span>
               </span>
             </button>
             <div class="faq-accordion__content" id="faq3">
@@ -184,8 +192,12 @@
           </li>
           <li class="faq-accordion__item">
             <button class="faq-accordion__button button" data-toggle="#faq4">
-              Признаётся ли учёба в рамках проекта для дальнейшего обучения?
-              <span class="faq-accordion__button-wrapper button-icon-wrapper">
+              <span class="faq-accordion__button-text">
+                Признаётся ли учёба в рамках проекта</br> для дальнейшего обучения?
+              </span>
+              <span class="faq-accordion__icon-wrapper button-icon-wrapper">
+                <span></span>
+                <span></span>
               </span>
             </button>
             <div class="faq-accordion__content" id="faq4">
@@ -198,8 +210,12 @@
           </li>
           <li class="faq-accordion__item">
             <button class="faq-accordion__button button" data-toggle="#faq5">
-              Как выглядит полный процесс регистрации на программу «Стажировка»?
-              <span class="faq-accordion__button-wrapper button-icon-wrapper">
+              <span class="faq-accordion__button-text">
+                Как выглядит полный процесс регистрации на программу «Стажировка»?
+              </span>
+              <span class="faq-accordion__icon-wrapper button-icon-wrapper">
+                <span></span>
+                <span></span>
               </span>
             </button>
             <div class="faq-accordion__content" id="faq5">
