--- a/source/index.html
+++ b/source/index.html
@@ -58,16 +58,16 @@
           </a>
           <ul class="header__nav-submenu-list">
             <li class="header__nav-submenu-item">
-              <a class="header__nav-submenu-link" href="#programs">Стажировки</a>
+              <a class="header__nav-submenu-link" href="#about">Стажировки</a>
             </li>
             <li class="header__nav-submenu-item">
-              <a class="header__nav-submenu-link" href="#programs">Волонтёрство</a>
+              <a class="header__nav-submenu-link" href="#about">Волонтёрство</a>
             </li>
             <li class="header__nav-submenu-item">
-              <a class="header__nav-submenu-link" href="#programs">Учёба</a>
+              <a class="header__nav-submenu-link" href="#about">Учёба</a>
             </li>
             <li class="header__nav-submenu-item">
-              <a class="header__nav-submenu-link" href="#programs">Религия</a>
+              <a class="header__nav-submenu-link" href="#about">Религия</a>
             </li>
           </ul>
         </li>
@@ -118,82 +118,98 @@
       <h2 class="visually-hidden">Блок промо</h2>
       <div class="hero__container container">
 
-        <div class="hero__image-wrapper">
-          <picture>
-            <source type="image/webp" media="(min-width: 1440px)"
-              srcset="./img/hero/hero-desktop-02.webp 1x, ./img/hero/hero-desktop-02@2x.webp 2x" width="1440"
-              height="800">
-            <source type="image/webp" media="(min-width: 768px)"
-              srcset="./img/hero/hero-tablet-02.webp 1x, ./img/hero/hero-tablet-02@2x.webp 2x" width="768"
-              height="1024">
-            <img class="hero__image" src="./img/hero/hero-mobile-01.jpg"
-              alt="Мужчина с двумя девушками работают в планшете" width="320" height="568"
-              srcset="./img/hero/hero-mobile-02@2x.jpg 2x" loading="lazy">
-          </picture>
-        </div>
+        <picture>
+          <source type="image/webp" media="(min-width: 1440px)"
+            srcset="./img/hero/hero-desktop-02.webp 1x, ./img/hero/hero-desktop-02@2x.webp 2x" width="1440"
+            height="800">
+          <source type="image/webp" media="(min-width: 768px)"
+            srcset="./img/hero/hero-tablet-02.webp 1x, ./img/hero/hero-tablet-02@2x.webp 2x" width="768" height="1024">
+          <img class="hero__image" src="./img/hero/hero-mobile-01.jpg"
+            alt="Мужчина с двумя девушками работают в планшете" width="320" height="568"
+            srcset="./img/hero/hero-mobile-02@2x.jpg 2x" loading="lazy">
+        </picture>
 
       </div>
     </section>
 
-    <!-- programs -->
-    <section class="programs" id="programs" data-test="programs">
-      <h2 class="visually-hidden">Программы обучения</h2>
-      <div class="programs__container container">
-        <ul class="programs__list">
+    <!-- about -->
+    <section class="about" id="about" data-test="about">
+      <div class="about__container container">
+        <h2 class="about__title">О проекте «Стажировка»</h2>
+        <p>«Стажировка» — совместный проект правительств и волонтёрских
+          бригад.
+        </p>
+        <div class="about__content">
+          <h3>Наша цель</h3>
+          <p>Наша деятельность направлена на повышение квалификации молодых специалистов
+            на ранних и средних стадиях карьеры, предоставляя им инструменты для решения сложных проблем,
+            с которыми сталкиваются в мире. Цель центра — наделить этих людей способностью инициировать значимые
+            изменения.
+          </p>
+          <button class="about__button button" type="button">подробнее о проекте
+            <div class="about__button-icon-wrapper">
+              <svg class="about__button-icon" width="8" height="8" viewBox="0 0 8 8" role="img" focusable="false"
+                aria-hidden="true">
+                <use href="/__spritemap#sprite-arrow"></use>
+              </svg>
+            </div>
+          </button>
+        </div>
+        <ul class="about__list">
 
-          <li class="programs__item">
-            <div class="programs__icon-wrapper">
-              <svg class="programs__icon" width="18" height="22" viewBox="0 0 18 22" role="img" focusable="false"
+          <li class="about__item">
+            <div class="about__icon-wrapper">
+              <svg class="about__icon" width="18" height="22" viewBox="0 0 18 22" role="img" focusable="false"
                 aria-hidden="true">
                 <use href="/__spritemap#sprite-prostar"></use>
               </svg>
             </div>
-            <span class="programs__title">
+            <span>
               Более 250 программ
             </span>
-            <p class="programs__desc">
+            <p>
               учебных и рабочих, разной длительностью от 3 месяцев до 1 года
             </p>
           </li>
-          <li class="programs__item">
-            <div class="programs__icon-wrapper">
-              <svg class="programs__icon" width="18" height="22" viewBox="0 0 18 22" role="img" focusable="false"
+          <li class="about__item">
+            <div class="about__icon-wrapper">
+              <svg class="about__icon" width="18" height="22" viewBox="0 0 18 22" role="img" focusable="false"
                 aria-hidden="true">
                 <use href="/__spritemap#sprite-prostar"></use>
               </svg>
             </div>
-            <span class="programs__title">
+            <span>
               Более 3000 участников
             </span>
-            <p class="programs__desc">
+            <p class="about__desc">
               уже успешно прошли программу от «Стажировка» и остались в разных странах
             </p>
           </li>
-          <li class="programs__item">
-            <div class="programs__icon-wrapper">
-              <svg class="programs__icon" width="18" height="22" viewBox="0 0 18 22" role="img" focusable="false"
+          <li class="about__item">
+            <div class="about__icon-wrapper">
+              <svg class="about__icon" width="18" height="22" viewBox="0 0 18 22" role="img" focusable="false"
                 aria-hidden="true">
                 <use href="/__spritemap#sprite-prostar"></use>
               </svg>
             </div>
-            <span class="programs__title">
+            <span>
               участники из 60 стран
             </span>
-            <p class="programs__desc">
+            <p>
               студенты со всего мира приезжают на программу «Стажировки» от 3 месяцев до 1 года
             </p>
           </li>
-          <li class="programs__item">
-            <div class="programs__icon-wrapper">
-              <svg class="programs__icon" width="18" height="22" viewBox="0 0 18 22" role="img" focusable="false"
+          <li class="about__item">
+            <div class="about__icon-wrapper">
+              <svg class="about__icon" width="18" height="22" viewBox="0 0 18 22" role="img" focusable="false"
                 aria-hidden="true">
                 <use href="/__spritemap#sprite-prostar"></use>
               </svg>
             </div>
-            <span class="programs__title">
+            <span>
               от 4 200 $</br>до 8 400 $
             </span>
-            <p class="programs__desc">
+            <p>
               грант всем участникам для комфортного прохождения программы
             </p>
           </li>
@@ -206,7 +222,7 @@
         <h3 class="faq-accordion__title">Вопросы и ответы</h3>
         <ul class="faq-accordion__list" id="accordion">
           <li class="faq-accordion__item">
-            <button class="faq-accordion__button button" data-toggle="#faq1">
+            <button class="faq-accordion__button button" type="button" data-toggle="#faq1">
               <span class="faq-accordion__button-text">
                 Кто организатор? Какие сроки у программы?
               </span>
@@ -223,7 +239,7 @@
             </div>
           </li>
           <li class="faq-accordion__item">
-            <button class="faq-accordion__button button" data-toggle="#faq2">
+            <button class="faq-accordion__button button" type="button" data-toggle="#faq2">
               <span class="faq-accordion__button-text">
                 Что такое грант на обучение?
               </span>
@@ -241,7 +257,8 @@
             </div>
           </li>
           <li class="faq-accordion__item">
-            <button class="faq-accordion__button button" data-toggle="#faq3">
+            <button class="faq-accordion__button faq-accordion__button--opened button" type="button"
+              data-toggle="#faq3">
               <span class="faq-accordion__button-text">
                 Как определяется стоимость программы?
               </span>
@@ -250,7 +267,7 @@
                 <span></span>
               </span>
             </button>
-            <div class="faq-accordion__content" id="faq3">
+            <div class="faq-accordion__content faq-accordion__content--opened" id="faq3">
               <p>
                 Полная стоимость определяется организаторами в зависимости от направления. В большинстве случаев грант
                 «Стажировка» не покрывает полную стоимость программы, и поэтому предусматривается определённая доля
@@ -259,7 +276,7 @@
             </div>
           </li>
           <li class="faq-accordion__item">
-            <button class="faq-accordion__button button" data-toggle="#faq4">
+            <button class="faq-accordion__button button" type="button" data-toggle="#faq4">
               <span class="faq-accordion__button-text">
                 Признаётся ли учёба в рамках проекта</br> для дальнейшего обучения?
               </span>
@@ -277,7 +294,7 @@
             </div>
           </li>
           <li class="faq-accordion__item">
-            <button class="faq-accordion__button button" data-toggle="#faq5">
+            <button class="faq-accordion__button button" type="button" data-toggle="#faq5">
               <span class="faq-accordion__button-text">
                 Как выглядит полный процесс регистрации на программу «Стажировка»?
               </span>
