Реализует слайдер с прогами по PP для мобильной и планшетной версий

--- a/source/index.html
+++ b/source/index.html
@@ -34,79 +34,81 @@
         <use href="/__spritemap#sprite-logo"></use>
       </svg>
     </div>
-    <button class="header__menu-button button" type="button" id="burger-link">
-      МЕНЮ
-      <span class="header__menu-wrapper button-icon-wrapper">
-        <span class="header__menu">
-          <span></span>
-          <span></span>
-          <span></span>
+    <div class="header__wrapper">
+      <button class="header__menu-button button" type="button" id="burger-link">
+        МЕНЮ
+        <span class="header__menu-wrapper button-icon-wrapper">
+          <span class="header__menu">
+            <span></span>
+            <span></span>
+            <span></span>
+          </span>
         </span>
-      </span>
-    </button>
-    <nav class="header__nav">
-      <ul class="header__nav-list">
-        <li class="header__nav-item">
-          <a class="header__nav-link" href="#">О проекте</a>
-        </li>
-        <li class="header__nav-item" data-has-children="true">
-          <a class="header__nav-link" href="#" aria-expanded="false">Программы
-            <svg class="header__nav-link-icon" width="12" height="7" viewBox="0 0 12 7" role="img" focusable="false"
-              aria-hidden="true">
-              <use href="/__spritemap#sprite-arrow-nav-menu"></use>
-            </svg>
-          </a>
-          <ul class="header__nav-submenu-list">
-            <li class="header__nav-submenu-item">
-              <a class="header__nav-submenu-link" href="#about">Стажировки</a>
-            </li>
-            <li class="header__nav-submenu-item">
-              <a class="header__nav-submenu-link" href="#about">Волонтёрство</a>
-            </li>
-            <li class="header__nav-submenu-item">
-              <a class="header__nav-submenu-link" href="#about">Учёба</a>
-            </li>
-            <li class="header__nav-submenu-item">
-              <a class="header__nav-submenu-link" href="#about">Религия</a>
-            </li>
-          </ul>
-        </li>
-        <li class="header__nav-item">
-          <a class="header__nav-link" href="#">Как поехать</a>
-        </li>
-        <li class="header__nav-item">
-          <a class="header__nav-link" href="#">Отзывы</a>
-        </li>
-        <li class="header__nav-item" data-has-children="true">
-          <a class="header__nav-link" href="#" aria-expanded="false">Новости
-            <svg class="header__nav-link-icon" width="12" height="7" viewBox="0 0 12 7" role="img" focusable="false"
-              aria-hidden="true">
-              <use href="/__spritemap#sprite-arrow-nav-menu"></use>
-            </svg>
-          </a>
-          <ul class="header__nav-submenu-list">
-            <li class="header__nav-submenu-item">
-              <a class="header__nav-submenu-link" href="">Общее</a>
-            </li>
-            <li class="header__nav-submenu-item">
-              <a class="header__nav-submenu-link" href="">Стажировки</a>
-            </li>
-            <li class="header__nav-submenu-item">
-              <a class="header__nav-submenu-link" href="">Волонтёрство</a>
-            </li>
-            <li class="header__nav-submenu-item">
-              <a class="header__nav-submenu-link" href="">Карьера</a>
-            </li>
-            <li class="header__nav-submenu-item">
-              <a class="header__nav-submenu-link" href="">Путешествия</a>
-            </li>
-          </ul>
-        </li>
-        <li class="header__nav-item">
-          <a class="header__nav-link" href="#">Контакты</a>
-        </li>
-      </ul>
-    </nav>
+      </button>
+      <nav class="header__nav">
+        <ul class="header__nav-list">
+          <li class="header__nav-item">
+            <a class="header__nav-link" href="#">О проекте</a>
+          </li>
+          <li class="header__nav-item" data-has-children="true">
+            <a class="header__nav-link" href="#" aria-expanded="false">Программы
+              <svg class="header__nav-link-icon" width="12" height="7" viewBox="0 0 12 7" role="img" focusable="false"
+                aria-hidden="true">
+                <use href="/__spritemap#sprite-arrow-nav-menu"></use>
+              </svg>
+            </a>
+            <ul class="header__nav-submenu-list">
+              <li class="header__nav-submenu-item">
+                <a class="header__nav-submenu-link" href="#about">Стажировки</a>
+              </li>
+              <li class="header__nav-submenu-item">
+                <a class="header__nav-submenu-link" href="#about">Волонтёрство</a>
+              </li>
+              <li class="header__nav-submenu-item">
+                <a class="header__nav-submenu-link" href="#about">Учёба</a>
+              </li>
+              <li class="header__nav-submenu-item">
+                <a class="header__nav-submenu-link" href="#about">Религия</a>
+              </li>
+            </ul>
+          </li>
+          <li class="header__nav-item">
+            <a class="header__nav-link" href="#">Как поехать</a>
+          </li>
+          <li class="header__nav-item">
+            <a class="header__nav-link" href="#">Отзывы</a>
+          </li>
+          <li class="header__nav-item" data-has-children="true">
+            <a class="header__nav-link" href="#" aria-expanded="false">Новости
+              <svg class="header__nav-link-icon" width="12" height="7" viewBox="0 0 12 7" role="img" focusable="false"
+                aria-hidden="true">
+                <use href="/__spritemap#sprite-arrow-nav-menu"></use>
+              </svg>
+            </a>
+            <ul class="header__nav-submenu-list">
+              <li class="header__nav-submenu-item">
+                <a class="header__nav-submenu-link" href="">Общее</a>
+              </li>
+              <li class="header__nav-submenu-item">
+                <a class="header__nav-submenu-link" href="">Стажировки</a>
+              </li>
+              <li class="header__nav-submenu-item">
+                <a class="header__nav-submenu-link" href="">Волонтёрство</a>
+              </li>
+              <li class="header__nav-submenu-item">
+                <a class="header__nav-submenu-link" href="">Карьера</a>
+              </li>
+              <li class="header__nav-submenu-item">
+                <a class="header__nav-submenu-link" href="">Путешествия</a>
+              </li>
+            </ul>
+          </li>
+          <li class="header__nav-item">
+            <a class="header__nav-link" href="#">Контакты</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
   </header>
 
   <section class="overlay">
@@ -307,7 +309,7 @@
                   srcset="./img/programs/program-tablet-slide-03.webp 1x, ./img/programs/program-tablet-slide-03@2x.webp 2x"
                   width="324" height="420">
                 <img class="programs__img" src="./img/programs/program-mobile-slide-03.jpg"
-                  alt="Две женщины работают в планшете." width="290" height="400"
+                  alt="Парень в очках что-то пишет в тетрадь." width="290" height="400"
                   srcset="./img/programs/program-mobile-slide-03@2x.jpg 2x" loading="lazy">
               </picture>
 
@@ -376,7 +378,7 @@
                 </div>
               </div>
             </li>
-            <li class="programs__item swiper-slide">
+            <!-- <li class="programs__item swiper-slide">
               <picture>
                 <source type="image/webp" media="(min-width: 1440px)"
                   srcset="./img/programs/program-desktop-slide-03.webp 1x, ./img/programs/program-desktop-slide-03@2x.webp 2x"
@@ -385,7 +387,7 @@
                   srcset="./img/programs/program-tablet-slide-03.webp 1x, ./img/programs/program-tablet-slide-03@2x.webp 2x"
                   width="324" height="420">
                 <img class="programs__img" src="./img/programs/program-mobile-slide-03.jpg"
-                  alt="Две женщины работают в планшете." width="290" height="400"
+                  alt="Парень в очках что-то пишет в тетрадь." width="290" height="400"
                   srcset="./img/programs/program-mobile-slide-03@2x.jpg 2x" loading="lazy">
               </picture>
 
@@ -427,9 +429,16 @@
                   </a>
                 </div>
               </div>
-            </li>
+            </li> -->
           </ul>
-          <div class="swiper-scrollbar"></div>
+
+
+          <div class="programs__scrollbar-wrapper">
+            <div class="programs__scrollbar custom-scrollbar swiper-scrollbar">
+              <div class="programs__scrollbar-drag custom-scrollbar-drag swiper-scrollbar-drag"></div>
+            </div>
+          </div>
+
         </div>
         <button class="programs__button button button-details" type="button">все программы
           <div class="programs__button-icon-wrapper button-details-icon-wrapper">
